add command bus
